--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,7 +41,7 @@ body {
 
 @layer components {
   .gradient-bg {
-    @apply relative h-screen w-full ;
+    @apply relative max-h-[70vh] w-full;
   }
 
   .glow {
@@ -49,10 +49,10 @@ body {
   }
 
   .glow-blue {
-    @apply top-[35%] left-[75%] h-[374px] w-[488px] bg-[#6CDCFF]/20;
+    @apply top-[40%] left-[75%] bg-[#6CDCFF]/20 md:h-[374px] md:w-[488px];
   }
 
   .glow-purple {
-    @apply top-[35%] left-[45%] h-[365px] w-[477px] bg-[#DB73FF]/30;
+    @apply top-[35%] left-[45%] bg-[#DB73FF]/30 md:h-[365px] md:w-[477px];
   }
 }
