add missing glow effect on the blogpost page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,7 +42,7 @@ body {
 
 @layer components {
   .gradient-bg {
-    @apply relative max-h-[70vh] w-full;
+    @apply relative lg:min-h-[70vh] w-full;
   }
 
   .glow {
